updated spring boot to version 2.6.3 and to spring security 5